Fix race condition in teardown

Manually disconnect from QApplication::focusChanged to prevent spurious focus change signals  from reaching us during teardown.

BUG:444654
FIXED-IN:1.9.4